Fix spacing issues with thumbnails
- Make thumbnail host inline-block as opposed to inline
- Remove earlier line break fix

--- a/src/app/gallery/thumbnail/thumbnail.component.sass
+++ b/src/app/gallery/thumbnail/thumbnail.component.sass
@@ -1,8 +1,13 @@
 @import '../../../shared-sass/palette'
 
+\:host
+  display: inline-block
+  line-height: 1
+  margin: 8px
+
 a
   display: inline-block
-  margin: 4px 8px
+  line-height: 1.9
   overflow: hidden
   text-decoration: none
   max-height: 290px
